--- a/acme-flight-system/App.config
+++ b/acme-flight-system/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <connectionStrings>
-      <add name="TB_VOO" connectionString="Data Source=.\acme.sqlite;Version=3;" providerName="System.Data.SqlClient"/>
+      <add name="acme_database" connectionString="Data Source=.\acme.sqlite;Version=3;" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
