--- a/acme-flight-system/acme-flight-system.csproj
+++ b/acme-flight-system/acme-flight-system.csproj
@@ -56,17 +56,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataBaseManager.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="AcmeForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AcmeForm.Designer.cs">
+      <DependentUpon>AcmeForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\VooModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="AcmeForm.resx">
+      <DependentUpon>AcmeForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
